@@ -82,6 +82,25 @@ describe 'sssd' do
           it { is_expected.to create_class('pki') }
           it { is_expected.to create_file('/etc/pki/simp_apps/sssd/x509')}
         end
+
+        context 'with debug_level as an integer' do
+          let(:params) {{ :debug_level => 9 }}
+          it { is_expected.to compile.with_all_deps }
+          it { is_expected.to create_class('sssd') }
+        end
+
+        context 'with debug_level as a two-byte hexidecimal' do
+          let(:params) {{ :debug_level => '0x1234' }}
+          it { is_expected.to compile.with_all_deps }
+          it { is_expected.to create_class('sssd') }
+        end
+
+        context 'with debug_level as an invalid Sssd::DebugLevel' do
+          let(:params) {{ :debug_level => '0x123z' }}
+          it { is_expected.to compile.and_raise_error(/parameter 'debug_level' expects a value of/)}
+          let(:params) {{ :debug_level => 99 }}
+          it { is_expected.to compile.and_raise_error(/parameter 'debug_level' expects a value of/)}
+        end
       end
     end
   end
